// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification/> should display dismiss icon because notification is dismissible and dismiss button enabled: notification is dismissible and dismiss button enabled 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 reapop__notification--dismissible\\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div><svg class=\\"reapop__notification-dismiss-icon\\" viewBox=\\"4 4 8 8\\" fill=\\"currentColor\\" data-testid=\\"dismiss-icon\\">
    <path fill-rule=\\"evenodd\\" d=\\"M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z\\"></path>
  </svg>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should not display dismiss icon because dismiss button is not enabled: dismiss button is not enabled 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 reapop__notification--dismissible\\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should not display dismiss icon because notification is not dismissible: notification is not dismissible 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification (HTML allowed) 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\"><span>title</span></h4>
    <p class=\\"reapop__notification-message\\"><span>message</span></p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification (HTML not allowed) 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">&lt;span&gt;title&lt;/span&gt;</h4>
    <p class=\\"reapop__notification-message\\">&lt;span&gt;message&lt;/span&gt;</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification (dismissible with dismiss button) 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 reapop__notification--dismissible\\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div><svg class=\\"reapop__notification-dismiss-icon\\" viewBox=\\"4 4 8 8\\" fill=\\"currentColor\\" data-testid=\\"dismiss-icon\\">
    <path fill-rule=\\"evenodd\\" d=\\"M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z\\"></path>
  </svg>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification (dismissible with no dismiss button) 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 reapop__notification--dismissible\\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification (not dismisible) 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification with 0 button(s) 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-0 \\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
</div>"
`;

exports[`<Notification/> should render a notification with 1 button(s) 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-1 \\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification with 2 button(s) 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification with image 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\">
  <div class=\\"reapop__notification-image-container\\"><span class=\\"reapop__notification-image\\" style=\\"background-image: url(image.png);\\"></span></div>
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification with theme 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" style=\\"color: red;\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\">
  <div style=\\"color: blue;\\" class=\\"reapop__notification-meta\\">
    <h4 style=\\"color: green;\\" class=\\"reapop__notification-title\\">Hello world!</h4>
    <p style=\\"color: white;\\" class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" style=\\"display: block; width: 100%; height: 50%; min-height: 40px; box-sizing: border-box; padding: 0px; background: rgb(47, 47, 54); border-radius: 0; border-left: 1px solid #464c5f; outline: none; text-align: center; color: rgb(255, 255, 255); cursor: pointer;\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\" style=\\"display: block; height: 25px; padding: 0px 15px; min-width: 90px; max-width: 150px; width: auto; white-space: nowrap; overflow: hidden; margin: 0px auto; text-overflow: ellipsis; text-align: center; font-size: 14px; line-height: 25px;\\">yes</span></button><button data-testid=\\"button\\" style=\\"display: block; width: 100%; height: 50%; min-height: 40px; box-sizing: border-box; padding: 0px; background: rgb(47, 47, 54); border-radius: 0; border-left: 1px solid #464c5f; outline: none; text-align: center; color: rgb(255, 255, 255); cursor: pointer; border-top: 1px solid #464c5f;\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\" style=\\"display: block; height: 25px; padding: 0px 15px; min-width: 90px; max-width: 150px; width: auto; white-space: nowrap; overflow: hidden; margin: 0px auto; text-overflow: ellipsis; text-align: center; font-size: 14px; line-height: 25px;\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification with theme 2`] = `
Array [
  Array [
    Object {
      "buttons": Array [
        Object {
          "name": "yes",
        },
        Object {
          "name": "no",
        },
      ],
      "id": "1",
      "message": "say hello to the world",
      "position": "top-left",
      "showDismissButton": true,
      "status": "none",
      "title": "Hello world!",
    },
  ],
]
`;

exports[`<Notification/> should render a notification with theme 3`] = `
Array [
  Array [
    Object {
      "buttons": Array [
        Object {
          "name": "yes",
        },
        Object {
          "name": "no",
        },
      ],
      "id": "1",
      "message": "say hello to the world",
      "position": "top-left",
      "showDismissButton": true,
      "status": "none",
      "title": "Hello world!",
    },
  ],
]
`;

exports[`<Notification/> should render a notification with theme 4`] = `
Array [
  Array [
    Object {
      "buttons": Array [
        Object {
          "name": "yes",
        },
        Object {
          "name": "no",
        },
      ],
      "id": "1",
      "message": "say hello to the world",
      "position": "top-left",
      "showDismissButton": true,
      "status": "none",
      "title": "Hello world!",
    },
  ],
]
`;

exports[`<Notification/> should render a notification with theme 5`] = `
Array [
  Array [
    Object {
      "buttons": Array [
        Object {
          "name": "yes",
        },
        Object {
          "name": "no",
        },
      ],
      "id": "1",
      "message": "say hello to the world",
      "position": "top-left",
      "showDismissButton": true,
      "status": "none",
      "title": "Hello world!",
    },
  ],
]
`;

exports[`<Notification/> should render a notification without image 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification without theme 1`] = `
"<div data-testid=\\"notification\\" role=\\"alert\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\">
  <div class=\\"reapop__notification-meta\\">
    <h4 class=\\"reapop__notification-title\\">Hello world!</h4>
    <p class=\\"reapop__notification-message\\">say hello to the world</p>
  </div>
  <div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">yes</span></button><button data-testid=\\"button\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\">no</span></button></div>
</div>"
`;

exports[`<Notification/> should render a notification without theme 2`] = `Array []`;

exports[`<Notification/> should render a notification without theme 3`] = `Array []`;

exports[`<Notification/> should render a notification without theme 4`] = `Array []`;

exports[`<Notification/> should render a notification without theme 5`] = `Array []`;

exports[`<Notification/> should use the custom \`NotificationIcon\` component 1`] = `"<div data-testid=\\"notification\\" role=\\"alert\\" style=\\"color: red;\\" class=\\"reapop__notification reapop__notification--none reapop__notification--buttons-2 \\"><span>custom-icon</span><div style=\\"color: blue;\\" class=\\"reapop__notification-meta\\"><h4 style=\\"color: green;\\" class=\\"reapop__notification-title\\">Hello world!</h4><p style=\\"color: white;\\" class=\\"reapop__notification-message\\">say hello to the world</p></div><div class=\\"reapop__notification-buttons\\"><button data-testid=\\"button\\" style=\\"display: block; width: 100%; height: 50%; min-height: 40px; box-sizing: border-box; padding: 0px; background: rgb(47, 47, 54); border-radius: 0; border-left: 1px solid #464c5f; outline: none; text-align: center; color: rgb(255, 255, 255); cursor: pointer;\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\" style=\\"display: block; height: 25px; padding: 0px 15px; min-width: 90px; max-width: 150px; width: auto; white-space: nowrap; overflow: hidden; margin: 0px auto; text-overflow: ellipsis; text-align: center; font-size: 14px; line-height: 25px;\\">yes</span></button><button data-testid=\\"button\\" style=\\"display: block; width: 100%; height: 50%; min-height: 40px; box-sizing: border-box; padding: 0px; background: rgb(47, 47, 54); border-radius: 0; border-left: 1px solid #464c5f; outline: none; text-align: center; color: rgb(255, 255, 255); cursor: pointer; border-top: 1px solid #464c5f;\\" class=\\"reapop__notification-button\\"><span class=\\"reapop__notification-button-text\\" style=\\"display: block; height: 25px; padding: 0px 15px; min-width: 90px; max-width: 150px; width: auto; white-space: nowrap; overflow: hidden; margin: 0px auto; text-overflow: ellipsis; text-align: center; font-size: 14px; line-height: 25px;\\">no</span></button></div></div>"`;
